--- a/1.原生Node篇/get请求/get中的form表单式请求/form.html
+++ b/1.原生Node篇/get请求/get中的form表单式请求/form.html
@@ -11,11 +11,11 @@
     密码：<input type="password" name="password" value="male"><br>
     性别：<input type="radio" name="sex" value="male">男 <input type="radio" name="sex" value="female">女<br>
     <input type="submit">
-    <input type="image" src="logo.png">
+    <!--<input type="image" src="logo.png">-->
     <button type="submit">提交</button>
 
 </form>
-<div onclick="get()">ddddd</div>
+<button onclick="get()">获取数据</button>
 <script>
 //    function get() {
 //
