--- a/1.原生Node篇/post请求/post中的ajax请求(常用)/ajax.html
+++ b/1.原生Node篇/post请求/post中的ajax请求(常用)/ajax.html
@@ -11,7 +11,7 @@
     var data = {name:"bob",age:20,sex:"male"};
     var xhr = new XMLHttpRequest();//demo中不考虑浏览器兼容问题
     function set() {
-        xhr.open("POST","http://localhost:3000/aa");
+        xhr.open("POST","http://localhost:3000/dopost");
         xhr.send(data);
     }
     xhr.onreadystatechange=function () {
